[project]
name = "ckan-ogc"
version = "0.1.0"
description = "Populate CKAN using data from a different sources as OGC Servers, CSW Endpoints, tabular data (XLS/XLSX, CSV, etc.), XML Metadata Files, etc."
authors = [
    {name = "mjanez", email = "mnl.janez@gmail.com"},
]
dependencies = [
    "ptvsd>=4.3.2",
    "rdflib>=6.3.2",
    "pyproj>=3.6.0",
    "owslib>=0.29.2",
    "requests>=2.31.0",
    "openpyxl>=3.1.2",
    "urllib3>=2.0.3",
    "pandas>=2.0.3",
    "geojson>=2.5.0",
    "lxml>=4.9.2",
    "psycopg2-binary>=2.9.6",
    "six>=1.16.0",
    "joblib>=1.3.1",
    "bs4>=0.0.1",
    "html5lib>=1.1",
    "jsonschema>=4.17.3",
    "xlrd>=2.0.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPLv3"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
